Update May objectives

--- a/src/templates/html/Energy_bus_exercises_May_2016.html
+++ b/src/templates/html/Energy_bus_exercises_May_2016.html
@@ -8,16 +8,18 @@
     <div style="height: 0px;"><a href="map.html"><small><small>(Back to map
             page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
       </a> </div>
-    <div style="text-align: center;"><a href="www.theenergybus.com"><big><big><span
+    <div style="text-align: center;"><a href="http://www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
       <div style="text-align: left;">2/5/2016</div>
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Badminton&nbsp; - 7th May<br>
-    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - Merrist Wood - 8th May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span style="text-decoration: line-through;">-
+      Badminton&nbsp; - 7th May</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dinner Curry Kelly's - 13th May<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dinner Sandra/Nick - 14th May<br>
+    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - Merrist Wood - 15th May<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -
     Zoe&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     - 21st May<br>
@@ -28,7 +30,8 @@
     &nbsp;&nbsp;&nbsp; + Personal<br>
     ON &nbsp; - look after plants<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read Bryson book<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span style="text-decoration: line-through;">-
+      Read Bryson book</span><br>
     &nbsp;&nbsp;&nbsp; + Flat<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Find house<br>
     &nbsp; &nbsp; + Excel<br>
