Create June 2016 tasks

--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,7 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_June_2016.html">My visions June 2016</a><br>
     <a href="Energy_bus_exercises_May_2016.html">My visions May 2016</a><br>
     <a href="Energy_bus_exercises_Apr_2016.html">My visions April 2016</a><br>
     <a href="Energy_bus_exercises_Mar_2016.html">My visions March 2016</a><br>
