Add blood tests to calendar

--- a/src/templates/html/Energy_bus_exercises_June_2016.html
+++ b/src/templates/html/Energy_bus_exercises_June_2016.html
@@ -15,15 +15,19 @@
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Bruv's - 3-5th June<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Endure 24 - 11-12th June<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Bruv's
+      - 3-5th June</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Endure
+      24 - 11-12th June</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Ted Party 18-19th June<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - (Sarah birthday 24th June)<br>
     <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Help bruv out<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read How to magazine<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Help
+      bruv out</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Read
+      How to magazine</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel powerpoint and give to
     Lou<br>
     ON &nbsp; - look after plants<br>
@@ -40,6 +44,7 @@
     &nbsp;&nbsp;&nbsp; + Mindfulness book<br>
     <br>
     July<br>
+    &nbsp;&nbsp;&nbsp; + Blood tests 1st July 15:15<br>
     &nbsp;&nbsp;&nbsp; + Dr Behr Thursday 7th July ECG 2:10<br>
     &nbsp;&nbsp;&nbsp; + Lama Tree 16th July<br>
     &nbsp;&nbsp;&nbsp; + Sarah's BBQ 23rd July<br>
