--- a/src/templates/html/Energy_bus_exercises_July_2016.html
+++ b/src/templates/html/Energy_bus_exercises_July_2016.html
@@ -11,33 +11,35 @@
     <div style="text-align: center;"><a href="http://www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
-      <div style="text-align: left;">2/6/2016</div>
+      <div style="text-align: left;">1/7/2016</div>
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Bruv's
-      - 3-5th June</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Endure
-      24 - 11-12th June</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Ted
-      Party 18-19th June</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">(Sarah
-      birthday 24th June)</span><br>
-    <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Blood tests 1st July 15:15<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou babysit molly
+    6th July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dr Behr Thursday 7th July ECG 2:10<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou school summer
+    ball 9th July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lunch out with
+    Sandra and Nick 10th July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lama Tree 16th/17th July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Celebration
+    evening 20th July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Staff party
+    21st July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Epsom
+    playhouse 22nd July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sarah's BBQ 23rd July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Caravan 25th
+    July<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Help
-      bruv out</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Read
-      How to magazine</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel powerpoint and give to
     Lou<br>
     ON &nbsp; - look after plants<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Read
-      IET magazine</span><br>
-    &nbsp;&nbsp;&nbsp; + Flat<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Find
-      house</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
+    &nbsp;&nbsp;&nbsp; + Buy house<br>
     <br>
     ON + Lou<br>
     ON + Job<br>
@@ -47,15 +49,15 @@
     + Buy garden table<br>
     &nbsp;&nbsp;&nbsp; + Mindfulness book<br>
     <br>
-    July<br>
-    &nbsp;&nbsp;&nbsp; + Blood tests 1st July 15:15<br>
-    &nbsp;&nbsp;&nbsp; + Dr Behr Thursday 7th July ECG 2:10<br>
-    &nbsp;&nbsp;&nbsp; + Lama Tree 16th July<br>
-    &nbsp;&nbsp;&nbsp; + Sarah's BBQ 23rd July<br>
-    <br>
+    August<br>
+    &nbsp;&nbsp;&nbsp; + Venice 2nd-9th August<br>
+    &nbsp;&nbsp;&nbsp; + Okehampton 9th-14th August<br>
+    &nbsp;&nbsp;&nbsp; + France 26th August - 3rd September?<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
-    &nbsp;&nbsp;&nbsp; + Complete Excel<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Excel<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Mortgage<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + BAE<br>
     <br>
     LONG TERM<br>
     &nbsp;&nbsp;&nbsp; + Cricket<br>
