Add mortgage page

--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -32,9 +32,11 @@
       <li>Frensham pond</li>
       <li>Fishing with Gary</li>
       <li>Chelsea flower show - 27/28 May</li>
-      <li>Surrey county show - 30 May</li>
+      <li><span style="text-decoration: line-through;">Surrey county show - 30
+          May</span></li>
+      <span style="text-decoration: line-through;"> </span>
       <li>British grand prix</li>
-      <li>Wimbledon - 27 June</li>
+      <li><span style="text-decoration: line-through;">Wimbledon - 27 June</span></li>
       <li>Denbies</li>
     </ol>
     Andy - longterm<br>
