--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -41,6 +41,8 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="html/Energy_bus.html">Energy bus</a></li>
                 <li role="separator" class="divider"></li>
+                <li><a href="html/Mortgage.html">Mortgage</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="html/The_Secret.html">The secret</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="html/Bands_I_like.html">Bands I like</a></li>
