Update map file

--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -32,7 +32,8 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
       secret</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Bands_I_like.html">Bands
-      I like</a><br>
+      I like</a><span style="color: #0000ee;"><span style="text-decoration: underline;"></span></span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Mortgage.html">Mortgage</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/cricket.html">Cricket</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/raspberry_pi.html">Raspberry pi</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/apache.html">Web design</a><br>
