--- a/src/templates/html/Mortgage_old.html
+++ b/src/templates/html/Mortgage_old.html
@@ -35,7 +35,7 @@
         <br>
         Mortgage £319,000<br>
         <br>
-        Repayment @2.18/25years = £1,380<br>
+        Repayment 2.18/25years = £1,380<br>
       </div>
       <span style="color: rgb(204, 0, 0);"></span></div>
   </body>
