--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -11,31 +11,7 @@
     <div style="text-align: center;"><big><big><span style="text-decoration: underline;">Mortgage
             Calculation</span></big></big><br>
       <br>
-      <div style="text-align: left;">Flat:<br>
-        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
-        Solicitors&nbsp;&nbsp;&nbsp;&nbsp; -£1,000<br>
-        <span style="text-decoration: underline;">Mortgage -£138,000</span><br>
-        Total &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £100,000<br>
-        <br>
-        Bray Rd:<br>
-        Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; £605,000<br>
-        <br>
-        Fees<br>
-        Stampduty&nbsp;&nbsp;&nbsp;&nbsp; £20,500<br>
-        Mortgage Fee&nbsp; £1,000<span style="text-decoration: underline;"><br>
-          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £2,500</span><br>
-        Total&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £24,000<br>
-        <br>
-        Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £210,000 (+ £20,000 reserve)<br>
-        <br>
-        Andy&nbsp; £210,000-£12,000=£198,000<br>
-        Lou&nbsp;&nbsp;&nbsp; £100,000-£12,000=&nbsp; £88,000<br>
-        <br>
-        Mortgage £319,000<br>
-        <br>
-        Repayment @2.18/25years = £1,380<br>
+      <div style="text-align: left;"><br>
       </div>
       <span style="color: rgb(204, 0, 0);"></span></div>
   </body>
