--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <meta content="text/html; http-equiv=" content-type"="">
     <title>Mortgage</title>
   </head>
   <body>
@@ -11,7 +11,30 @@
             Calculation</span></big></big><br>
       <br>
       <div style="text-align: left;">Flat:<br>
-        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <br>
+        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
+        Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £1,000<br>
+        <span style="text-decoration: underline;">Mortgage&nbsp; £138,000</span><br>
+        Total &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £100,000<br>
+        <br>
+        Bray Rd:<br>
+        Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; £605,000<br>
+        <br>
+        Fees<br>
+        Stampduty&nbsp;&nbsp;&nbsp;&nbsp; £20,500<br>
+        Mortgage Fee&nbsp; £1,000<span style="text-decoration: underline;"><br>
+          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £2,500</span><br>
+        Total&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £24,000<br>
+        <br>
+        Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        £210,000 (+ £20,000 reserve)<br>
+        <br>
+        Andy&nbsp; £210,000-£12,000=£198,000<br>
+        Lou&nbsp;&nbsp;&nbsp; £100,000-£12,000=&nbsp; £88,000<br>
+        <br>
+        Mortgage £319,000<br>
+        <br>
+        Repayment @2.18/25years = £1,380<br>
       </div>
       <span style="color: rgb(204, 0, 0);"></span></div>
   </body>
