--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -11,30 +11,34 @@
             Calculation</span></big></big><br>
       <br>
       <div style="text-align: left;">Flat:<br>
-        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
-        Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £1,000<br>
-        <span style="text-decoration: underline;">Mortgage&nbsp; £138,000</span><br>
-        Total &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £100,000<br>
+        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 240,000<br>
+        Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1,000<br>
+        <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp;
+          138,000</span><br>
+        Total &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        100,000<br>
         <br>
         Bray Rd:<br>
-        Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; £605,000<br>
+        Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+        605,000<br>
         <br>
         Fees<br>
-        Stampduty&nbsp;&nbsp;&nbsp;&nbsp; £20,500<br>
-        Mortgage Fee&nbsp; £1,000<span style="text-decoration: underline;"><br>
-          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; £2,500</span><br>
+        Stampduty&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 20,500<br>
+        Mortgage Fee&nbsp;&nbsp;&nbsp; 1,000<span style="text-decoration: underline;"><br>
+          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          2,500</span><br>
         Total&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £24,000<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 24,000<br>
         <br>
-        Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £210,000 (+ £20,000 reserve)<br>
+        Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        210,000 (+ 20,000 reserve)<br>
         <br>
-        Andy&nbsp; £210,000-£12,000=£198,000<br>
-        Lou&nbsp;&nbsp;&nbsp; £100,000-£12,000=&nbsp; £88,000<br>
+        Andy&nbsp; 210,000 - 12,000= 198,000<br>
+        Lou&nbsp;&nbsp;&nbsp; 100,000 - 12,000=&nbsp;&nbsp; 88,000<br>
         <br>
-        Mortgage £319,000<br>
+        Mortgage&nbsp; 319,000<br>
         <br>
-        Repayment @2.18/25years = £1,380<br>
+        Repayment @2.18/25years = 1,380<br>
       </div>
       <span style="color: rgb(204, 0, 0);"></span></div>
   </body>
