add a pound sign having changed to utf-8

--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="text/html; http-equiv=" content-type"="">
     <title>Mortgage</title>
   </head>
@@ -11,7 +12,7 @@
             Calculation</span></big></big><br>
       <br>
       <div style="text-align: left;">Flat:<br>
-        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 240,000<br>
+        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
         Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1,000<br>
         <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp;
           138,000</span><br>
