--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -36,7 +36,8 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop1">
-                <li><a href="html/Lou_Andy_things_to_do.html">Andy Lou things to do</a></li>
+                <li><a href="html/Lou_Andy_things_to_do.html">Andy Lou things to do 2016</a></li>
+                <li><a href="html/Lou_Andy_things_to_do_2017.html">Andy Lou things to do 2017</a></li>
                 <li><a href="html/Things_to_do.html">Things to do</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="html/Energy_bus.html">Energy bus</a></li>
