--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -12,7 +12,9 @@
     <a href="home.html">Home page</a><br>
     &nbsp;&nbsp;&nbsp; * <a href="html/Personal.html">Personal</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Lou_Andy_things_to_do.html">Andy-Lou
-      things to do</a><br>
+      things to do 2016</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Lou_Andy_things_to_do_2017.html">Andy-Lou
+      things to do 2017</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Things_to_do.html">Things
       to do</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
