--- a/src/templates/html/Bands_I_like.html
+++ b/src/templates/html/Bands_I_like.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Bands_I_like</title></head><body>
-  
-<div style="height: 0px;"><a href="file:///home/acarter/cricket/www/html/map.html"><small><small>(Back to map page)</small></small></a><br>
-</div>
-
-
-
-<div style="text-align: center;"><big><big><span style="text-decoration: underline;">Bands I like</span></big></big><br>
-</div>
-
-<br>
-Some bands/albums I need to get:<br><br>
-Greenday<br>
-&nbsp;&nbsp;&nbsp; - Good riddance [Time of your life] (Nimrod)<br>
-<br>
-Roxette<br>
-&nbsp;&nbsp;&nbsp; - Listen to your heart<br>
-<br>
-Kate Bush<br>
-&nbsp;&nbsp;&nbsp; - Running up a hill<br>
-&nbsp;&nbsp;&nbsp; - wuthering heights<br>
-&nbsp;&nbsp;&nbsp; - cloudbusting<br>
-<br>
-<a href="https://www.noip.com/" target="_blank"></a>
-
-</body></html>
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>Bands_I_like</title>
+  </head>
+  <body>
+    <div style="height: 0px;"><a href="file:///home/acarter/cricket/www/html/map.html"><small><small>(Back
+            to map page)</small></small></a><br>
+    </div>
+    <div style="text-align: center;"><big><big><span style="text-decoration: underline;">Bands
+            I like</span></big></big><br>
+    </div>
+    <br>
+    Some bands/albums I need to get:<br>
+    <br>
+    Greenday<br>
+    &nbsp;&nbsp;&nbsp; - Good riddance [Time of your life] (Nimrod)<br>
+    <br>
+    Roxette<br>
+    &nbsp;&nbsp;&nbsp; - Listen to your heart<br>
+    <br>
+    Kate Bush<br>
+    &nbsp;&nbsp;&nbsp; - Running up a hill<br>
+    &nbsp;&nbsp;&nbsp; - wuthering heights<br>
+    &nbsp;&nbsp;&nbsp; - cloudbusting<br>
+    <br>
+    Switchfoot<br>
+    &nbsp;&nbsp;&nbsp; - ALL ALBUMS<br>
+    <br>
+    <br>
+    Films I want to watch<br>
+    &nbsp;&nbsp;&nbsp; - the connection: Mind your body<br>
+    <a href="https://www.noip.com/" target="_blank"></a>
+  </body>
+</html>
