--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta content="text/html; http-equiv=" content-type"="">
     <title>Mortgage</title>
   </head>
@@ -14,9 +14,11 @@
       <div style="text-align: left;">Flat:<br>
         Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
         Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £1,000<br>
-        <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp; £138,000</span><br>
-        Total &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £100,000<br>
+        Agents fee&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £3,000<br>
+        <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp; £139,000</span><br>
+        Total
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        £97,000<br>
         <br>
         Bray Rd:<br>
         Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
@@ -25,16 +27,15 @@
         Fees<br>
         Stampduty&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £20,500<br>
         Mortgage Fee&nbsp;&nbsp;&nbsp; £1,000<span style="text-decoration: underline;"><br>
-          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          £2,500</span><br>
+          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £2,000</span><br>
         Total&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £24,000<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £23,500<br>
         <br>
         Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £210,000 (+ £20,000 reserve)<br>
+        £200,500 (+ £29,500 reserve)<br>
         <br>
-        Andy&nbsp; £210,000 - £12,000= £198,000<br>
-        Lou&nbsp;&nbsp;&nbsp; £100,000 - £12,000=&nbsp;&nbsp; £88,000<br>
+        Andy&nbsp; £200,500 - £11,750= £188,750<br>
+        Lou&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £97,000 - £11,750=&nbsp;&nbsp; £85,250<br>
         <br>
         Mortgage&nbsp; £319,000<br>
         <br>
