Update Mortgage with completion updates

--- a/src/templates/html/Mortgage.html
+++ b/src/templates/html/Mortgage.html
@@ -10,36 +10,47 @@
             page)</small></small></a> </div>
     <div style="text-align: center;"><big><big><span style="text-decoration: underline;">Mortgage
             Calculation</span></big></big><br>
-      <br>
+      <div style="text-align: left;">August 28/9/2016<br>
+      </div>
       <div style="text-align: left;">Flat:<br>
-        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £240,000<br>
-        Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £1,000<br>
-        Agents fee&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £3,000<br>
-        <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp; £139,000</span><br>
+        Price &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £240,268<br>
+        Solicitors&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £1,010<br>
+        Agents fee&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £2,880<br>
+        <span style="text-decoration: underline;">Mortgage&nbsp;&nbsp;&nbsp; £138,824</span><br>
         Total
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £97,000<br>
+        £97,553<br>
         <br>
         Bray Rd:<br>
         Price&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-        £605,000<br>
+        £602,195<br>
         <br>
         Fees<br>
-        Stampduty&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £20,500<br>
-        Mortgage Fee&nbsp;&nbsp;&nbsp; £1,000<span style="text-decoration: underline;"><br>
-          Solicitors&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £2,000</span><br>
+        Stampduty&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £20,250<br>
+        Mortgage Fee&nbsp;&nbsp;&nbsp; £1,019&nbsp;&nbsp;&nbsp; (£999 + £20
+        transfer fee)<br>
+        <span style="text-decoration: underline;"> Solicitors&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £2,001.70</span><br>
         Total&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £23,500<br>
         <br>
         Cash&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        £200,500 (+ £29,500 reserve)<br>
+        £287,500 (+ £16,000 reserve + Andy extra reserve)<br>
         <br>
-        Andy&nbsp; £200,500 - £11,750= £188,750<br>
-        Lou&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £97,000 - £11,750=&nbsp;&nbsp; £85,250<br>
+        Andy&nbsp; £200,500 -&nbsp; £8,000= £206,445 + £32,000 (Of which £8000
+        is car = £24,000)<br>
+        Lou&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; £97,553 -&nbsp; £8,000=&nbsp;&nbsp;
+        £87,000 + Mini paid off<br>
         <br>
-        Mortgage&nbsp; £319,000<br>
+        Mortgage&nbsp; £331,000<br>
         <br>
         Repayment @2.18/25years = £1,432<br>
+        <br>
+        Plan Andy/Lou monthly put in £1000 to monthly bills.<br>
+        Both put in £1500 for work (Andy £500 a month from savings).<br>
+        After two years Andy reserve down to £12,000 since we only put in on 10
+        months.<br>
+        <br>
       </div>
       <span style="color: rgb(204, 0, 0);"></span></div>
   </body>
