--- a/src/templates/html/Energy_bus_exercises_Nov_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Nov_2016.html
@@ -44,6 +44,7 @@
     &nbsp;&nbsp;&nbsp; + Frimley flyers Xmas dinner Sunday 4th December<br>
     &nbsp;&nbsp;&nbsp; + Lou Rock choir Xmas dinner Wednesday 7th December<br>
     &nbsp;&nbsp;&nbsp; + Out with Sandra Saturday 10th December<br>
+    &nbsp;&nbsp;&nbsp; + Dr Saba appointment Tuesday 13th December<br>
     &nbsp;&nbsp;&nbsp; + Lou's mum Xmas meal Sunday 18th December<br>
     &nbsp;&nbsp;&nbsp; + Lou Xmas dinner Tuesday 20th December<br>
     &nbsp;&nbsp;&nbsp; + Lou finishes work Wednesday 21st December<br>
