--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,7 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_Nov_2016.html">My visions Nov 2016</a><br>
     <a href="Energy_bus_exercises_July_2016.html">My visions July 2016</a><br>
     <a href="Energy_bus_exercises_June_2016.html">My visions June 2016</a><br>
     <a href="Energy_bus_exercises_May_2016.html">My visions May 2016</a><br>
