Update November actions

--- a/src/templates/html/Energy_bus_exercises_Nov_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Nov_2016.html
@@ -15,44 +15,38 @@
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Blood tests 1st July 15:15<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou babysit molly
-    6th July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dr Behr Thursday 7th July ECG 2:10<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou school summer
-    ball 9th July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lunch out with
-    Sandra and Nick 10th July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lama Tree 16th/17th July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Celebration
-    evening 20th July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Staff party
-    21st July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Epsom
-    playhouse 22nd July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sarah's BBQ 23rd July<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Lou Caravan 25th
-    July<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Guildford xmas lights Thursday 17th
+    November 7pm<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Bruv down Weekend 18-20th November<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Hannah dinner Friday 25th November
+    (evening)<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lou medicine garden Saturday 26th
+    November<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel powerpoint and give to
-    Lou<br>
-    ON &nbsp; - look after plants<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel sheet (auto size) and
+    give to Lou<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
-    &nbsp;&nbsp;&nbsp; + Buy house<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Install water jacket<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Put boxes in loft<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sort out front door draft<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Rob<br>
     <br>
     ON + Lou<br>
     ON + Job<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
-    + Buy dinner for bruv and sis<br>
-    + Buy garden table<br>
-    &nbsp;&nbsp;&nbsp; + Mindfulness book<br>
     <br>
-    August<br>
-    &nbsp;&nbsp;&nbsp; + Venice 2nd-9th August<br>
-    &nbsp;&nbsp;&nbsp; + Okehampton 9th-14th August<br>
-    &nbsp;&nbsp;&nbsp; + France 26th August - 3rd September?<br>
+    December<br>
+    &nbsp;&nbsp;&nbsp; + Lou BlueWater girls Thursday 1st December <br>
+    &nbsp;&nbsp;&nbsp; + Lou London Rockchoir Saturday 3rd December<br>
+    &nbsp;&nbsp;&nbsp; + Frimley flyers Xmas dinner Sunday 4th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Rock choir Xmas dinner Wednesday 7th December<br>
+    &nbsp;&nbsp;&nbsp; + Out with Sandra Saturday 10th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou's mum Xmas meal Sunday 18th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Xmas dinner Tuesday 20th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou finishes work Wednesday 21st December<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Excel<br>
