--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -17,6 +17,8 @@
       things to do 2017</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Things_to_do.html">Things
       to do</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="House_plan.html">House
+      plan</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Nov_2016.html">Energy
