Correct menu label for home plan

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -40,7 +40,7 @@
                 <li><a href="html/Lou_Andy_things_to_do_2017.html">Andy Lou things to do 2017</a></li>
                 <li><a href="html/Things_to_do.html">Things to do</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="html/House_plan.html">Energy bus</a></li>
+                <li><a href="html/House_plan.html">House plan</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="html/Energy_bus.html">Energy bus</a></li>
                 <li role="separator" class="divider"></li>
