Add virtual machine setup page - need to add links

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -82,8 +82,8 @@
                     	<li><a href="#">Nokia</a></li>
                     </ul>
                   </li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-submenu">
+                  <li role="separator" class="divider"></li>                                      <li><ahref="html/Virtual_machine.html">Virtual Machine Setup</a></li>
+                  <li role="separator" class="divider"></li>                     	            <li class="dropdown-submenu">
                     <a href="#">Coding</a>
                     <ul class="dropdown-menu">
                         <li><a href="html/C_optimization.html">C optimization</a></li>
