--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -57,6 +57,8 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Linux &nbsp; &nbsp;&nbsp;&nbsp; <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ls_ll.html">ls/ll</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/symbolic_links.html">symlinks</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Virtual_machine.html">Virtual
+      Machine setup</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Other links<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ANPR.html">ANPR</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; LTE<br>
