Early December update

--- a/src/templates/html/House_plan.html
+++ b/src/templates/html/House_plan.html
@@ -13,30 +13,45 @@
       <br>
       <div style="text-align: left;">13/11/2016</div>
     </div>
-    SHORT-TERM PLAN (November)<br>
+    (November)<br>
+    &nbsp;&nbsp;&nbsp; + Lag cold water tank &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; + Get Laura and Jon to have a look&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; + Sort out side gate&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+    DONE<br>
+    <br>
+    1/12/2016<br>
+    SHORT-TERM PLAN (December)<br>
     &nbsp;&nbsp;&nbsp; + Get quotes from two other electricians<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - To sort out on the 16/11/2016<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - To sort out on the 16/11/2016&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Phone James 3/12/2016<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Get gutters done<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Speak to Andy about <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The kitchen<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The loft insulation<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The loft
+    insulation<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The dining room
     chimley<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The bathroom wall<br>
-    &nbsp;&nbsp;&nbsp; + Lag cold water tank<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -<br>
+    <br>
     &nbsp;&nbsp;&nbsp; + Get Paul to at the same as Andy<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lou or Gary to sort out this week<br>
     <br>
-    &nbsp;&nbsp;&nbsp; + Get Laura and Jon to have a look<br>
-    <br>
     &nbsp;&nbsp;&nbsp; + Do something with the front door letterbox<br>
     &nbsp;&nbsp;&nbsp; + Do something with the front door gaps<br>
-    &nbsp;&nbsp;&nbsp; + Sort out side gate<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Look at Windows and get quotes<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Do something with the back door gaps<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Design bathroom change<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Chimley/front quote<br>
     <br>
     MEDIUM TERM<br>
-    &nbsp;&nbsp;&nbsp; + Look at Windows and get quotes<br>
     &nbsp;&nbsp;&nbsp; + Do something with the back door gaps<br>
     &nbsp;&nbsp;&nbsp; + Get structural engineer round<br>
     &nbsp;&nbsp;&nbsp; + Complete electrics<br>
@@ -45,7 +60,7 @@
     LONG TERM (More idea following talks to Paul and Andy, no order at the
     moment)<br>
     &nbsp;&nbsp;&nbsp; + Windows<br>
-    &nbsp;&nbsp;&nbsp; +&nbsp; Bathroom<br>
+    &nbsp;&nbsp;&nbsp; + Bathroom<br>
     &nbsp;&nbsp;&nbsp; + Kitchen<br>
     &nbsp;&nbsp;&nbsp; + Shed<br>
     &nbsp;&nbsp;&nbsp; + Loft insulation<br>
