--- a/src/templates/html/Energy_bus_exercises_Dec_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Dec_2016.html
@@ -11,46 +11,46 @@
     <div style="text-align: center;"><a href="http://www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
-      <div style="text-align: left;">13/11/2016</div>
+      <div style="text-align: left;">30/11/2016</div>
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
-    &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Guildford
-      xmas lights Thursday 17th November 7pm</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Bruv
-      down Weekend 18-20th November</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Hannah
-      dinner Friday 25th November (evening)</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Lou
-      medicine garden Saturday 26th November</span><br>
+    - Things happening<br>
+    &nbsp;&nbsp;&nbsp; + Lou BlueWater girls Thursday 1st December <br>
+    &nbsp;&nbsp;&nbsp; + Lou London Rockchoir Saturday 3rd December<br>
+    &nbsp;&nbsp;&nbsp; + Frimley flyers Xmas dinner Sunday 4th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Rock choir Xmas dinner Wednesday 7th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Xmas fair Saturday 10th December<br>
+    &nbsp;&nbsp;&nbsp; + Out with Sandra Saturday 10th December<br>
+    &nbsp;&nbsp;&nbsp; + Dr Saba appointment Tuesday 13th December<br>
+    &nbsp;&nbsp;&nbsp; + Andy Xmas dinner Wednesday 14th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Olympia horseshow Friday 16th December<br>
+    &nbsp;&nbsp;&nbsp; + London Duncan/Kelly Saturday 17th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou's mum Xmas meal Sunday 18th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou School Xmas dinner Tuesday 20th December<br>
+    &nbsp;&nbsp;&nbsp; + Lou finishes work Wednesday 21st December<br>
+    &nbsp;&nbsp;&nbsp; + Lou Bocketts Santa Thursday 22st December<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Think up presents<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sort out front door draft<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dig garden<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Buy presents<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email structural engineer<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - talk to James (electrician)<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel sheet (auto size) and
     give to Lou<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Install
-      water jacket</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Put boxes in loft<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Sort out front door draft<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">email
-      Rob</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     <br>
     ON + Lou<br>
     ON + Job<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
     <br>
-    December<br>
-    &nbsp;&nbsp;&nbsp; + Lou BlueWater girls Thursday 1st December <br>
-    &nbsp;&nbsp;&nbsp; + Lou London Rockchoir Saturday 3rd December<br>
-    &nbsp;&nbsp;&nbsp; + Frimley flyers Xmas dinner Sunday 4th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Rock choir Xmas dinner Wednesday 7th December<br>
-    &nbsp;&nbsp;&nbsp; + Out with Sandra Saturday 10th December<br>
-    &nbsp;&nbsp;&nbsp; + Dr Saba appointment Tuesday 13th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou's mum Xmas meal Sunday 18th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou Xmas dinner Tuesday 20th December<br>
-    &nbsp;&nbsp;&nbsp; + Lou finishes work Wednesday 21st December<br>
+    January<br>
+    &nbsp;&nbsp;&nbsp; - Dr Behr/pacing January 5th 2:25<br>
+    <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Excel<br>
