Update December plans

--- a/src/templates/html/Energy_bus_exercises_Dec_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Dec_2016.html
@@ -36,8 +36,10 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dig garden<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Buy presents<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email Leve<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - email structural engineer<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - talk to James (electrician)<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">email
+      structural engineer</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">talk
+      to James (electrician)</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Update Excel sheet (auto size) and
     give to Lou<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
