--- a/src/templates/html/House_plan.html
+++ b/src/templates/html/House_plan.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-    <title>Energy_bus_-_exercises</title>
+    <title>Home Plan</title>
   </head>
   <body>
     <div style="height: 0px;"><a href="map.html"><small><small>(Back to map
@@ -14,29 +14,41 @@
       <div style="text-align: left;">13/11/2016</div>
     </div>
     (November)<br>
-    &nbsp;&nbsp;&nbsp; + Lag cold water tank &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; DONE<br>
-    &nbsp;&nbsp;&nbsp; + Get Laura and Jon to have a look&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; DONE<br>
-    &nbsp;&nbsp;&nbsp; + Sort out side gate&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    DONE<br>
+    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Lag cold
+      water tank</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get Laura
+      and Jon to have a look</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Sort out
+      side gate</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
     <br>
     1/12/2016<br>
     SHORT-TERM PLAN (December)<br>
-    &nbsp;&nbsp;&nbsp; + Get quotes from two other electricians<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - To sort out on the
-    16/11/2016&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp; DONE<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Phone James 3/12/2016<br>
+    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
+      quotes from two other electricians</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">To
+      sort out on the 16/11/2016</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; DONE<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Phone
+      James</span> 3/12/2016&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; DONE (awaiting response)<br>
     <br>
-    &nbsp;&nbsp;&nbsp; + Get gutters done<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Speak to Andy about <br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The kitchen<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The loft
-    insulation<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The dining room
-    chimley<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * The bathroom wall<br>
+    &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Get
+      gutters</span> DONE<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Speak
+      to Andy about</span> <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+      kitchen</span>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp; <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+      loft insulation</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+      dining room chimley</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; * <span style="text-decoration: line-through;">The
+      bathroom wall</span> &nbsp;&nbsp;&nbsp; Gary to look at<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Reglective radiators&nbsp;&nbsp;&nbsp; 12/12/2016<br>
+    <br>
+    &nbsp;&nbsp;&nbsp; + Insulate the garage/lag pipes<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Get Paul to at the same as Andy<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Lou or Gary to sort out this week<br>
