Update house plan

--- a/src/templates/html/House_plan.html
+++ b/src/templates/html/House_plan.html
@@ -56,6 +56,8 @@
     &nbsp;&nbsp;&nbsp; + Do something with the front door letterbox<br>
     &nbsp;&nbsp;&nbsp; + Do something with the front door gaps<br>
     <br>
+    &nbsp;&nbsp;&nbsp; + Talk to Andy's uncle<br>
+    <br>
     &nbsp;&nbsp;&nbsp; + Look at Windows and get quotes<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Matt Perfect?<br>
     <br>
