--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,6 +14,7 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
+    <a href="Energy_bus_exercises_Feb_2017.html">My visions Feb 2017<span style="color: black;"></span></a><br>
     <a href="Energy_bus_exercises_Dec_2016.html">My visions Dec 2016</a><br>
     <a href="Energy_bus_exercises_Nov_2016.html">My visions Nov 2016</a><br>
     <a href="Energy_bus_exercises_July_2016.html">My visions July 2016</a><br>
